--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -5,29 +5,30 @@
   <section class="story">
     <div class="story-title"><%= image_tag ("/images/STORY.png") %></div>
     <div class="story-content">
-      <div class="story-content-1"><%= image_tag ("/images/STORY1.png") %></div>
-      <div class="story-content-2"><%= image_tag ("/images/STORY2-01.png") %></div>
-      <div class="story-content-3"><%= image_tag ("/images/STORY3-01.png") %></div>
-      <div class="story-content-4"><%= image_tag ("/images/STORY4-01.png") %></div>
-      <div class="story-content-5"><%= image_tag ("/images/虹.png") %></div>
+      <div class="story-content-1"><%= image_tag("/images/STORY1.png") %></div>
+      <div class="story-content-2"><%= image_tag("/images/STORY2-01.png") %></div>
+      <div class="story-content-3"><%= image_tag("/images/STORY3-01.png") %></div>
+      <div class="story-content-4"><%= image_tag("/images/STORY4-01.png") %></div>
+      <div class="story-content-5"><%= image_tag("/images/虹.png") %></div>
     </div>
   </section>
   <section class="profile">
-    <div class="profile-title"><%= image_tag ("/images/profile.png") %></div>
+    <div class="profile-title"><%= image_tag("/images/profile.png") %></div>
     <div class="profile-content">
-      <div class="profile-content-image"><%= image_tag ("/images/profile3-01.png") %></div>
-      <div class="profile-content-description"><%= image_tag ("/images/profile2-01.png") %></div>
+      <div class="profile-content-image"><%= image_tag("/images/profile3-01.png") %></div>
+      <div class="profile-content-description"><%= image_tag("/images/profile2-01.png") %></div>
     </div>
   </section>
   <section class="goods">
-    <div class="goods-bg"><%= image_tag ("/images/背景２.png") %></div>
-    <div class="goods-image"><%= image_tag ("/images/GOODS.png") %></div>
+    <div class="goods-bg"><%= image_tag("/images/背景２.png") %></div>
+    <div class="goods-image"><%= image_tag("/images/GOODS.png") %></div>
   </section>
   <section class="twitter">
-    <div class="twitter-title"><%= image_tag ("/images/Twitter.png") %></div>
+    <div class="twitter-title"><%= image_tag("/images/Twitter.png") %></div>
   </section>
   <section class="contact">
-    <div class="contact-title"><%= image_tag ("/images/お問合せ.png") %></div>
+    <div class="contact-title"><%= image_tag("/images/お問合せ.png") %></div>
+    <div><%= link_to("お問い合わせはこちら", new_inquiry_path) %></div>
   </section>
 </div>
 <div id="page_top"><a href="#"></a></div>
