--- a/app/views/inquiries/new.html.erb
+++ b/app/views/inquiries/new.html.erb
@@ -1,3 +1,4 @@
-<h1>お問い合わせページ</h1>
-
-<%= render "shared/inquiry_form" %>
+<div class="inquiry-page">
+  <div class="inquiry-page-title"><%= image_tag("/images/お問合せ.png") %></div>
+  <%= render "shared/inquiry_form" %>
+</div>
