--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,9 +1,6 @@
 <% if @inquiry.errors.any? %>
   <div id="error_explanation">
-    <div class="alert alert-danger">
-      The form contains <%= pluralize(@inquiry.errors.count, "error") %>.
-    </div>
-    <ul>
+    <ul class="errors-list">
     <% @inquiry.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
     <% end %>
