--- a/app/views/shared/_inquiry_form.html.erb
+++ b/app/views/shared/_inquiry_form.html.erb
@@ -4,12 +4,12 @@
       <%= render 'shared/error_messages' %>
 
       <%= f.label :email %>
-      <%= f.text_field :email, class: 'form-control' %>
+      <%= f.text_field :email, placeholder: "contact@example.com", class: 'form-control' %>
 
       <%= f.label :message %>
       <%= f.text_area :message, class: 'form-control' %>
 
-      <%= f.submit "送信",data: { disable_with: "送信中..." }, class: "btn btn-primary" %>
+      <%= f.submit "そうしん",data: { disable_with: "そうしんちゅう..." }, class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
