--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -16,19 +16,21 @@
     <div class="profile-title"><%= image_tag("/images/profile.png") %></div>
     <div class="profile-content">
       <div class="profile-content-image"><%= image_tag("/images/profile3-01.png") %></div>
-      <div class="profile-content-description"><%= image_tag("/images/profile2-01.png") %></div>
+      <div class="profile-content-description"><%= image_tag("/images/profile_1_アートボード 1.png") %></div>
     </div>
   </section>
   <section class="goods">
     <div class="goods-bg"><%= image_tag("/images/背景２.png") %></div>
-    <div class="goods-image"><%= image_tag("/images/GOODS.png") %></div>
+    <div class="cloud"><%= image_tag("/images/twitter_cloud1.png") %></div>
+    <div class="cloud-2"><%= image_tag("/images/twitter_cloud1.png") %></div>
+    <div class="goods-image"><%= image_tag("/images/goods_1_アートボード 1.png") %><%= image_tag("/images/goods_logo.png", class: "good-logo") %></div>
   </section>
   <section class="twitter">
     <div class="twitter-title"><%= image_tag("/images/Twitter.png") %></div>
   </section>
   <section class="contact">
     <div class="contact-title"><%= image_tag("/images/お問合せ.png") %></div>
-    <div><%= link_to("お問い合わせはこちら", new_inquiry_path) %></div>
+    <div class="contact-link"><%= link_to("お問い合わせはこちら", new_inquiry_path) %></div>
   </section>
 </div>
 <div id="page_top"><a href="#"></a></div>
