--- a/app/assets/stylesheets/inquiries.scss
+++ b/app/assets/stylesheets/inquiries.scss
@@ -13,7 +13,7 @@
   background-image: url(/images/love_web背景2-01.png);
   margin-top: -8%;
   background-size: 100%;
-  min-height: 500px;
+  min-height: 800px;
   position: relative;
   padding-top: 40px;
 }
@@ -79,7 +79,7 @@ textarea#inquiry_message:focus {
   form#new_inquiry {
     width: 50%;
     display: block;
-    margin: 100px auto;
+    margin: 100px auto 0 auto;
   }
   input#inquiry_email {
     border: solid 2px #f1c7d0;
@@ -94,9 +94,19 @@ textarea#inquiry_message {
   width: 100%;
   border: solid 2px #f1c7d0;
   border-radius: 11px;
-  height: 100px;
+  height: 200px;
   font-size: 17px;
   color: gray;
   padding: 12px;
+  }
+  .link-to-top {
+    display: block;
+    text-align: center;
+    margin-bottom: 100px;
+    margin-top: 30px;
+  }
+  .link-to-top a {
+    color: gray;
+    text-decoration: none;
   }
 }
