--- a/app/views/inquiries/new.html.erb
+++ b/app/views/inquiries/new.html.erb
@@ -1,4 +1,7 @@
 <div class="inquiry-page">
   <div class="inquiry-page-title"><%= image_tag("/images/お問合せ.png") %></div>
   <%= render "shared/inquiry_form" %>
+  <div class="link-to-top">
+    <%= link_to("トップに戻る", homes_index_path) %>
+  </div>
 </div>
