--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Lovechan</title>
+    <%= display_meta_tags(default_meta_tags) %>
     <%= favicon_link_tag('love_icon-01.png') %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
