--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -33,11 +33,11 @@
   </section>
   <section class="twitter">
     <div class="twitter-title"><%= image_tag("/images/Twitter.png") %></div>
-    <%= link_to "https://twitter.com/Salud_jp?ref_src=twsrc%5Etfw", target: "_blank" do %>
+    <%= link_to "https://twitter.com/LOVEchan_angel?ref_src=twsrc%5Etfw", target: "_blank" do %>
       <%= image_tag("/images/follow-button.png", class: "follow-button") %>
       <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <% end %>
-    <div class="twitter-timeline"><a class="twitter-timeline" href="https://twitter.com/Salud_jp?ref_src=twsrc%5Etfw">Tweets by Salud_jp</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
+    <div class="twitter-timeline"><a class="twitter-timeline" href="https://twitter.com/LOVEchan_angel?ref_src=twsrc%5Etfw">Tweets by LOVEchan_angel</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
   </section>
   <section class="contact">
     <div class="contact-title"><%= image_tag("/images/お問合せ.png") %></div>
