--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -46,9 +46,9 @@
     <% end %>
   </section>
 </div>
-<div id="page_top"><a href="#"></a></div>
+<%# <div id="page_top"><a href="#"></a></div> %>
 
-<script>
+<%# <script>
 $(function() {
   var pagetop = $('#page_top');    
   pagetop.hide();
@@ -66,4 +66,4 @@ $(function() {
       return false;
   });
 });
-</script>
+</script> %>
