--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,12 @@
     <%= favicon_link_tag('love_icon-01.png') %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="twitter:card" content='summary_large_image' />
+    <meta name="twitter:site" content='@LOVEchan_angel' />
+    <meta property="og:url" content='https://lovechan.herokuapp.com/' />
+    <meta property="og:title" content='ラヴリーエンジェル♡ | ラヴちゃん' />
+    <meta property="og:description" content='ときめきラヴリー♡夢見るうさぎのおんなのこです♡' />
+    <meta property="og:image" content='<%= asset_url("1212.png")%>' />
     <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
