--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -46,7 +46,7 @@
     <% end %>
   </section>
 </div>
-<div id="page_top"><a href="#"></a></div> %>
+<div id="page_top"><a href="#"></a></div>
 
 <script>
 $(function() {
