edit custam domein

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= csp_meta_tag %>
     <meta name="twitter:card" content='summary_large_image' />
     <meta name="twitter:site" content='@LOVEchan_angel' />
-    <meta property="og:url" content='https://lovechan.herokuapp.com/' />
+    <meta property="og:url" content='https://www.loveryangel.com/' />
     <meta property="og:title" content='ラヴリーエンジェル♡ | ラヴちゃん' />
     <meta property="og:description" content='ときめきラヴリー♡夢見るうさぎのおんなのこです♡' />
     <meta property="og:image" content='<%= asset_url("1212.png")%>' />
